crates/musq-macros/tests/trybuild/fail_sql_unclosed.stderr
error: unmatched `{`
 --> tests/trybuild/fail_sql_unclosed.rs:4:13
  |
4 |     let _ = sql!("SELECT {id")?;
  |             ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
